--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: dorphell <dorphell@gmx.net>
 pkgname=gc
 pkgver=7.1
-pkgrel=1
+pkgrel=2
 pkgdesc="A garbage collector for C and C++"
 arch=(i686 x86_64)
 url="http://www.hpl.hp.com/personal/Hans_Boehm/gc/"
@@ -15,7 +15,15 @@ md5sums=('2ff9924c7249ef7f736ecfe6f08f3f9b')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  ./configure --prefix=/usr --enable-cplusplus || return 1
-  make || return 1
-  make DESTDIR="${pkgdir}" install || return 1
+  ./configure --prefix=/usr --enable-cplusplus
+  make
+  make DESTDIR="${pkgdir}" install
+
+  rm -rf "${pkgdir}/usr/share/gc"
+  install -m755 -d "${pkgdir}/usr/share/doc/gc"
+  install -m644 doc/README{,.{changes,contributors,environment,linux}} \
+    "${pkgdir}/usr/share/doc/gc/"
+
+  install -m755 -d "${pkgdir}/usr/share/man/man1"
+  install -m644 doc/gc.man "${pkgdir}/usr/share/man/man1/gc.1"
 }
