--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,10 +1,11 @@
 # $Id$
 # Maintainer: kevin <kevin@archlinux.org>
+# Maintainer: Gaetan Bisson <bisson@archlinux.org>
 # Contributor: John Proctor <jproctor@prium.net>
 
 pkgname=graphviz
-pkgver=2.26.3
-pkgrel=3
+pkgver=2.28.0
+pkgrel=1
 pkgdesc='Graph visualization software'
 url='http://www.graphviz.org/'
 license=('custom:EPL')
@@ -23,7 +24,7 @@ optdepends=('mono: sharp bindings'
             'tcl: tcl bindings')
 source=("${url}/pub/${pkgname}/stable/SOURCES/${pkgname}-${pkgver}.tar.gz"
         'LICENSE')
-sha1sums=('04503ac5a9eaa579859f0d017811fa245717edec'
+sha1sums=('4725d88a13e071ee22e632de551d4a55ca08ee7d'
           'e78277e502c29abb74b9587a5dc951ec392554ea')
 
 options=('!libtool')
