--- a/initscripts/trunk/PKGBUILD
+++ b/initscripts/trunk/PKGBUILD
@@ -4,8 +4,8 @@
 # Maintainer: Aaron Griffin <aaron@archlinux.org>
 
 pkgname=initscripts
-pkgver=2011.04.1
-pkgrel=2
+pkgver=2011.05.1
+pkgrel=1
 pkgdesc="System initialization/bootup scripts"
 arch=('i686' 'x86_64')
 url="http://www.archlinux.org"
@@ -20,11 +20,11 @@ optdepends=('bridge-utils: Network bridging support'
 install=initscripts.install
 source=("ftp://ftp.archlinux.org/other/initscripts/${pkgname}-${pkgver}.tar.xz"
         'wireless.conf.d')
-sha256sums=('470ad5ac1124594f7b13906e51c77fff8ef1ad14b6c67f16bfc309c06f5c5774'
+sha256sums=('f7d4a58b16dfa523d40452ca9c70aa5615790762e5eab1e4632dc7e1e2173807'
             '0eba4250b07e0a727ef64772f5ee9027b123cbd4bb0894ba2842f545035c827f')
 
 package() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  DESTDIR=${pkgdir} ./install.sh
+  make DESTDIR=${pkgdir} install
   install -D -m644 ${srcdir}/wireless.conf.d ${pkgdir}/etc/conf.d/wireless
 }
