--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=mutter
 pkgver=3.0.1
-pkgrel=1
+pkgrel=2
 pkgdesc="A window manager for GNOME3"
 arch=(i686 x86_64)
 license=('GPL')
@@ -15,11 +15,14 @@ url="http://www.gnome.org"
 groups=('gnome')
 options=('!libtool' '!emptydirs')
 install=mutter.install
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/${pkgver%.*}/${pkgname}-${pkgver}.tar.bz2)
-sha256sums=('6c3190789f935a2c982e78447726e87cf1d4b7af2f0b407cb6d6aca636e3d708')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/${pkgver%.*}/${pkgname}-${pkgver}.tar.bz2
+        squash_some_leaks.patch)
+sha256sums=('6c3190789f935a2c982e78447726e87cf1d4b7af2f0b407cb6d6aca636e3d708'
+            'dda962cfd884ffbe2c3c4a86641964228d7b04ef30e19bb2894c4398fa4c296a')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
+  patch -Np1 -i "${srcdir}/squash_some_leaks.patch"
   ./configure --prefix=/usr --sysconfdir=/etc \
       --libexecdir=/usr/lib/mutter \
       --localstatedir=/var --disable-static
