--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=icu
 pkgver=4.6.1
-pkgrel=1
+pkgrel=2
 pkgdesc="International Components for Unicode library"
 arch=(i686 x86_64)
 url="http://www.icu-project.org/"
@@ -12,11 +12,15 @@ license=('custom:"icu"')
 depends=('gcc-libs' 'sh')
 source=(http://download.icu-project.org/files/${pkgname}4c/${pkgver}/${pkgname}4c-${pkgver//./_}-src.tgz
 	#http://download.icu-project.org/files/${pkgname}4c/${pkgver}/${pkgname}4c-${pkgver/./_}-src.tgz
+	icu.8198.revert.icu5431.patch
 )
-md5sums=('da64675d85f0c2191cef93a8cb5eea88')
+md5sums=('da64675d85f0c2191cef93a8cb5eea88'
+         'ebd5470fc969c75e52baf4af94a9ee82')
 
 build() {
   cd ${srcdir}/icu/source
+  # fix Malayalam encoding https://bugzilla.redhat.com/show_bug.cgi?id=654200
+  patch -Rp3 -i ${srcdir}/icu.8198.revert.icu5431.patch
   ./configure --prefix=/usr \
 	--sysconfdir=/etc \
 	--mandir=/usr/share/man
