--- a/ypbind-mt/trunk/PKGBUILD
+++ b/ypbind-mt/trunk/PKGBUILD
@@ -1,9 +1,10 @@
 # $Id$
-# Maintainer: judd <jvinet@zeroflux.org>
+# Maintainer: Gaetan Bisson <bisson@archlinux.org>
+# Contributor: judd <jvinet@zeroflux.org>
 # Contributor: Tom Newsom <Jeepster@gmx.co.uk>
 
 pkgname=ypbind-mt
-pkgver=1.32
+pkgver=1.33
 pkgrel=1
 pkgdesc='Linux NIS daemon'
 arch=('i686' 'x86_64')
@@ -14,7 +15,7 @@ backup=('etc/yp.conf' 'etc/conf.d/ypbind')
 source=("ftp://ftp.kernel.org/pub/linux/utils/net/NIS/$pkgname-$pkgver.tar.gz"
         'ypbind.conf'
         'ypbind')
-sha1sums=('136d1cb1499d32d01f7efa216352911980a7dda8'
+sha1sums=('49f578d15aa5d4f4130a2e96cd9c0e519263fc88'
           '07dee386d001fb9e9e6b76dda8af5b2092e5a4a2'
           '66f6ea2f622e0724e6017bf835d4f7f4a5bf9534')
 
