--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,32 +1,32 @@
 # $Id$
-# Maintainer:
+# Maintainer: Gaetan Bisson <bisson@archlinux.org>
 # Contributor: Kevin Piche <kevin@archlinux.org>
 # Contributor: Tom Newsom <Jeepster@gmx.co.uk>
 
 pkgname=sharutils
-pkgver=4.10
+pkgver=4.11.1
 pkgrel=1
-pkgdesc="GNU shar makes so-called shell archives out of many files"
-arch=('i686' 'x86_64')
-url="http://www.gnu.org/software/sharutils/"
+pkgdesc='Makes so-called shell archives out of many files'
+url='http://www.gnu.org/software/sharutils/'
 license=('GPL')
+arch=('i686' 'x86_64')
 depends=('perl' 'gettext' 'texinfo')
-install=${pkgname}.install
-source=(ftp://ftp.gnu.org/gnu/${pkgname}/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('f918859228238d69e1ce78ccbec8f9e0')
+source=("ftp://ftp.gnu.org/gnu/${pkgname}/${pkgname}-${pkgver}.tar.bz2")
+sha1sums=('e9c9f869f8ecb3bcb30cc323e02e0a1266aeb109')
+
+install=install
 
 build() {
-  cd ${srcdir}/${pkgname}-${pkgver}
-  ./configure --prefix=/usr --mandir=/usr/share/man \
-    --infodir=/usr/share/info \
-    --disable-nls
-  make
+	cd "${srcdir}/${pkgname}-${pkgver}"
+	./configure \
+		--prefix=/usr \
+		--mandir=/usr/share/man \
+		--infodir=/usr/share/info \
+
+	make
 }
 
 package() {
-  cd ${srcdir}/${pkgname}-${pkgver}
-  make DESTDIR=${pkgdir} install
-
-  rm ${pkgdir}/usr/share/info/dir
-  gzip ${pkgdir}/usr/share/info/*
+	cd "${srcdir}/${pkgname}-${pkgver}"
+	make DESTDIR="${pkgdir}" install
 }
