--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,11 +1,11 @@
 # $Id$
 # Maintainer: Thomas Bächler <thomas@archlinux.org>
 pkgname=attr
-pkgver=2.4.44
-pkgrel=3
+pkgver=2.4.46
+pkgrel=1
 pkgdesc="Extended attribute support library for ACL support"
 arch=('i686' 'x86_64')
-url="http://oss.sgi.com/projects/xfs/"
+url="http://savannah.nongnu.org/projects/attr"
 license=('LGPL')
 depends=('glibc') 
 makedepends=('gettext')
@@ -13,32 +13,25 @@ replaces=('xfsattr')
 provides=('xfsattr')
 conflicts=('xfsattr')
 options=('!libtool')
-source=(ftp://ftp.archlinux.org/other/attr/attr-${pkgver}.src.tar.gz)
-sha256sums=('e01fa00686072a02dddf994e6217be950f51c1dc0852ad2e210c48b6e8de793a')
+source=(http://download.savannah.gnu.org/releases/${pkgname}/${pkgname}-${pkgver}.src.tar.gz)
+sha256sums=('dcd69bdca7ff166bc45141eddbcf21967999a6b66b0544be12a1cc2fd6340e1f')
 
 build() {
-  cd $srcdir/attr-$pkgver 
+  cd "${srcdir}"/${pkgname}-${pkgver}
   
-  # prevent binaries being owned by nobody:nobody
-  sed -i 's#-o $(PKG_USER) -g $(PKG_GROUP)##' include/buildmacros
-  
-  autoconf
-  ./configure --prefix=/usr 
-  sed -i -e 's/man2//g' man/Makefile
+  export INSTALL_USER=root INSTALL_GROUP=root
+  ./configure --prefix=/usr --libdir=/lib --libexecdir=/usr/lib
   make
 }
 
 package() {
-  cd $srcdir/attr-$pkgver
-  make prefix=${pkgdir}/usr install install-lib install-dev
+  cd "${srcdir}"/${pkgname}-${pkgver}
+
+  make DIST_ROOT="${pkgdir}" install install-lib install-dev
 
   # tidy up
-  cd "${pkgdir}"
-
-  install -dm755 lib
-  mv -v usr/lib/libattr.so* lib/
-  ln -sv ../../lib/libattr.so.1 usr/lib/libattr.so
-
-  mv -v usr/libexec/libattr.{a,la} usr/lib/
-  rm -rvf usr/libexec
+  rm -f "${pkgdir}"/lib/libattr.a
+  chmod 0755 "${pkgdir}"/lib/libattr.so.*.*.*
+  # remove conflicting manpages
+  rm -rf "${pkgdir}"/usr/share/man/man2
 }
