--- a/gnutls/trunk/PKGBUILD
+++ b/gnutls/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gnutls
-pkgver=2.12.4
+pkgver=2.12.5
 pkgrel=1
 pkgdesc="A library which provides a secure layer over a reliable transport layer"
 arch=('i686' 'x86_64')
@@ -10,9 +10,9 @@ license=('GPL3' 'LGPL')
 url="http://www.gnu.org/software/gnutls/"
 install=gnutls.install
 options=('!libtool' '!zipman')
-depends=('gcc-libs>=4.4.3' 'libtasn1>=2.5' 'readline>=6.0' 'zlib' 'libgcrypt>=1.4.5')
+depends=('gcc-libs' 'libtasn1' 'readline' 'zlib' 'libgcrypt')
 source=(ftp://ftp.gnu.org/gnu/gnutls/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('3e17fc8cb1cf8272067f6b66baf02810')
+md5sums=('2d0bd5ae11534074fcd78da6ea384e64')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
