--- a/curl/trunk/PKGBUILD
+++ b/curl/trunk/PKGBUILD
@@ -6,12 +6,12 @@
 
 pkgname=curl
 pkgver=7.21.6
-pkgrel=1
+pkgrel=2
 pkgdesc="An URL retrival utility and library"
 arch=('i686' 'x86_64')
 url="http://curl.haxx.se"
 license=('MIT')
-depends=('zlib' 'openssl' 'bash' 'ca-certificates')
+depends=('zlib' 'openssl' 'bash' 'ca-certificates' 'libssh2')
 options=('!libtool')
 source=(http://curl.haxx.se/download/${pkgname}-${pkgver}.tar.bz2
         curlbuild.h)
