--- a/acpid/trunk/PKGBUILD
+++ b/acpid/trunk/PKGBUILD
@@ -1,42 +1,39 @@
 # $Id$
-# Maintainer: Thayer Williams <thayer@archlinux.org>
+# Maintainer:
+# Contributor: xduugu
 # Contributor: Manolis Tzanidakis
-# Contributor: Judd Vinet <jvinet@zeroflux.org>
+# Contributor: Jonathan Schmidt <j.schmidt@archlinux.us
 
 pkgname=acpid
-pkgver=1.0.10
-pkgrel=3
-pkgdesc="A daemon for delivering ACPI power management events"
+pkgver=2.0.9
+pkgrel=1
+pkgdesc="A daemon for delivering ACPI power management events with netlink support"
 arch=('i686' 'x86_64')
-url="http://acpid.sourceforge.net"
+url="http://tedfelix.com/linux/acpid-netlink.html"
 license=('GPL')
-depends=(glibc)
-source=(http://downloads.sourceforge.net/sourceforge/$pkgname/$pkgname-$pkgver.tar.gz
-    acpid
-    acpid.conf.d
-    anything
-    handler.sh)
-backup=('etc/acpi/handler.sh' 'etc/acpi/events/anything' 'etc/conf.d/acpid')
+depends=('bash')
+source=("http://www.tedfelix.com/linux/$pkgname-$pkgver.tar.gz"
+        'acpid'
+        'anything'
+        'handler.sh')
+backup=('etc/acpi/handler.sh' 'etc/acpi/events/anything')
 
 build() {
-    cd $srcdir/$pkgname-$pkgver
-    /usr/bin/make || return 1
-    /bin/install -d -m0755 $pkgdir/usr/bin || return 1
-    /usr/bin/make INSTPREFIX=$pkgdir \
-        MAN8DIR=$pkgdir/usr/share/man/man8 install || return 1
-
-    # install our supplementary scripts
-    /bin/install -D -m0755 $srcdir/acpid $pkgdir/etc/rc.d/acpid || return 1
-    /bin/install -D -m0644 $srcdir/acpid.conf.d $pkgdir/etc/conf.d/acpid || return 1
-    /bin/install -D -m0644 $srcdir/anything $pkgdir/etc/acpi/events/anything || return 1
-    /bin/install -D -m0755 $srcdir/handler.sh $pkgdir/etc/acpi/handler.sh || return 1
-
-    # set world readable bit on the acpid binary
-    /bin/chmod 755 $pkgdir/usr/sbin/acpid || return 1
+  cd "${srcdir}"/$pkgname-$pkgver
+  make
 }
 
-md5sums=('61156ef32015c56dc0f2e3317f4ae09e'
-         'd9ca7f71f520238a0448fab105a23fe9'
-         '91fdb3709c878eed757d192a420251a1'
+package() {
+  cd "${srcdir}"/$pkgname-$pkgver
+  make DESTDIR="${pkgdir}" install
+
+  install -Dm755 "$srcdir/acpid" "$pkgdir/etc/rc.d/acpid"
+  install -Dm644 "$srcdir/anything" "$pkgdir/etc/acpi/events/anything"
+  install -Dm755 "$srcdir/handler.sh" "$pkgdir/etc/acpi/handler.sh"
+
+  chmod 755 "${pkgdir}"/usr/sbin/acpid
+}
+md5sums=('8b30aa1b31f607161745a4ac7a19699b'
+         '277d6f5199650ac83fd3ad3612f79d2f'
          '2d37b98d6e74bab815604b8b48c6cfd4'
          '0e8dd13793b1baa79a745f4034888367')
