--- a/gstreamer0.10-base/trunk/PKGBUILD
+++ b/gstreamer0.10-base/trunk/PKGBUILD
@@ -3,15 +3,15 @@
 
 pkgbase=('gstreamer0.10-base')
 pkgname=('gstreamer0.10-base' 'gstreamer0.10-base-plugins')
-pkgver=0.10.32
-pkgrel=4
+pkgver=0.10.34
+pkgrel=1
 arch=('i686' 'x86_64')
 license=('LGPL')
-makedepends=('pkgconfig' 'gstreamer0.10>=0.10.32' 'orc' 'libxv' 'alsa-lib' 'cdparanoia' 'libvisual' 'libvorbis' 'libtheora' 'pango' 'udev' 'gobject-introspection')
+makedepends=('pkgconfig' 'gstreamer0.10>=0.10.34' 'orc' 'libxv' 'alsa-lib' 'cdparanoia' 'libvisual' 'libvorbis' 'libtheora' 'pango' 'gobject-introspection')
 options=(!libtool !emptydirs)
 url="http://gstreamer.freedesktop.org/"
 source=(${url}/src/gst-plugins-base/gst-plugins-base-${pkgver}.tar.bz2)
-md5sums=('2920af2b3162f3d9fbaa7fabc8ed4d38')
+sha256sums=('7f347a60cd4317c7ea44c23e52d6e6233d2fa278b3fe3df7cbefe2bc2e253989')
 
 build() {
   cd "${srcdir}/gst-plugins-base-${pkgver}"
@@ -28,7 +28,7 @@ build() {
 
 package_gstreamer0.10-base() {
   pkgdesc="GStreamer Multimedia Framework Base plugin libraries"
-  depends=('gstreamer0.10>=0.10.32' 'orc' 'libxv' 'udev')
+  depends=('gstreamer0.10>=0.10.34' 'orc' 'libxv')
 
   cd "${srcdir}/gst-plugins-base-${pkgver}"
   make DESTDIR="${pkgdir}" install
