--- a/gstreamer0.10-good/trunk/PKGBUILD
+++ b/gstreamer0.10-good/trunk/PKGBUILD
@@ -3,15 +3,15 @@
 
 pkgbase=gstreamer0.10-good
 pkgname=('gstreamer0.10-good' 'gstreamer0.10-good-plugins')
-pkgver=0.10.28
+pkgver=0.10.29
 pkgrel=1
 arch=('i686' 'x86_64')
 license=('LGPL')
-makedepends=('intltool' 'pkgconfig' 'gstreamer0.10-base>=0.10.32' 'libavc1394' 'libiec61883' 'aalib' 'libshout' 'libdv' 'esound' 'flac' 'gconf' 'wavpack' 'taglib' 'libsoup-gnome' 'v4l-utils' 'libcaca' 'bzip2' 'gdk-pixbuf2' 'libpulse' 'jack')
+makedepends=('intltool' 'pkgconfig' 'gstreamer0.10-base>=0.10.34' 'libavc1394' 'libiec61883' 'aalib' 'libshout' 'libdv' 'esound' 'flac' 'gconf' 'wavpack' 'taglib' 'libsoup-gnome' 'v4l-utils' 'libcaca' 'bzip2' 'gdk-pixbuf2' 'libpulse' 'jack' 'udev')
 url="http://gstreamer.freedesktop.org/"
 options=(!libtool !emptydirs)
 source=(${url}/src/gst-plugins-good/gst-plugins-good-${pkgver}.tar.bz2)
-md5sums=('6ef1588921f59d85c44ee2e49a3c97a0')
+sha256sums=('466a64dcb580d4feef701abfc90656abb3558a2e3fc1e40e43977034bebc354c')
 
 build() {
   cd "${srcdir}/gst-plugins-good-${pkgver}"
@@ -29,9 +29,8 @@ build() {
 }
 
 package_gstreamer0.10-good() {
-  depends=('gstreamer0.10-base>=0.10.32' 'bzip2')
+  depends=('gstreamer0.10-base>=0.10.34' 'bzip2')
   pkgdesc="GStreamer Multimedia Framework Good plugin libraries"
-  conflicts=('gstreamer0.10-bad<=0.10.17')
 
   cd "${srcdir}/gst-plugins-good-${pkgver}"
   make GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install
@@ -39,7 +38,7 @@ package_gstreamer0.10-good() {
 }
 
 package_gstreamer0.10-good-plugins() {
-  depends=("gstreamer0.10-good=${pkgver}" 'libavc1394' 'libiec61883' 'aalib' 'libshout' 'libdv' 'esound' 'flac' 'gconf' 'wavpack' 'taglib' 'libsoup-gnome' 'v4l-utils' 'libcaca' 'libpng' 'libjpeg' 'jack' 'libpulse')
+  depends=("gstreamer0.10-good=${pkgver}" 'libavc1394' 'libiec61883' 'aalib' 'libshout' 'libdv' 'esound' 'flac' 'gconf' 'wavpack' 'taglib' 'libsoup-gnome' 'v4l-utils' 'libcaca' 'libpng' 'libjpeg' 'jack' 'libpulse' 'udev')
   pkgdesc="GStreamer Multimedia Framework Good Plugins (gst-plugins-good)"
   groups=('gstreamer0.10-plugins')
   replaces=('gstreamer0.10-aalib' 'gstreamer0.10-wavpack' 'gstreamer0.10-shout2' 'gstreamer0.10-taglib' 'gstreamer0.10-libcaca' 'gstreamer0.10-libpng' 'gstreamer0.10-jpeg' 'gstreamer0.10-cairo' 'gstreamer0.10-flac' 'gstreamer0.10-speex' 'gstreamer0.10-gdkpixbuf' 'gstreamer0.10-dv1394' 'gstreamer0.10-annodex' 'gstreamer0.10-gconf' 'gstreamer0.10-esd' 'gstreamer0.10-cdio' 'gstreamer0.10-dv' 'gstreamer0.10-soup' 'gstreamer0.10-pulse')
