--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Alexander Baldeck <alexander@archlinux.org>
 
 pkgname=pixman
-pkgver=0.20.2
+pkgver=0.22.0
 pkgrel=1
 pkgdesc="Pixman library"
 arch=(i686 x86_64)
@@ -12,14 +12,22 @@ license=('custom')
 depends=('glibc')
 options=('!libtool')
 source=(http://xorg.freedesktop.org/releases/individual/lib/${pkgname}-${pkgver}.tar.bz2)
-sha1sums=('9972c8f8ce484f7649d9f588168cd29f61c05c63')
+sha1sums=('d24ea233755d7dce9f0d93136ad99fba8d4e4fa0')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --disable-static
   make
-  make check
+}
+
+package() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
   make DESTDIR="${pkgdir}" install
   install -m755 -d "${pkgdir}/usr/share/licenses/${pkgname}"
   install -m644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/"
+}
+
+check() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make check
 }
