--- a/poppler/trunk/PKGBUILD
+++ b/poppler/trunk/PKGBUILD
@@ -3,18 +3,18 @@
 
 pkgbase=poppler
 pkgname=('poppler' 'poppler-glib' 'poppler-qt')
-pkgver=0.16.4
+pkgver=0.16.5
 pkgrel=1
 arch=(i686 x86_64)
 license=('GPL')
 makedepends=('libjpeg' 'gcc-libs' 'cairo' 'libxml2' 'fontconfig' 'openjpeg' 'gtk2' 'qt' 'pkgconfig' 'lcms' 'gobject-introspection')
 options=('!libtool')
 url="http://poppler.freedesktop.org/"
-source=(http://poppler.freedesktop.org/${pkgname}-${pkgver}.tar.gz)
-md5sums=('2b996ca77dad04b422f67238daab48e7')
+source=(http://poppler.freedesktop.org/${pkgbase}-${pkgver}.tar.gz)
+md5sums=('2b6e0c26b77a943df3b9bb02d67ca236')
 
 build() {
-  cd "${srcdir}/${pkgname}-${pkgver}"
+  cd "${srcdir}/${pkgbase}-${pkgver}"
   sed -i -e '/AC_PATH_XTRA/d' configure.ac
   autoreconf
   ./configure --prefix=/usr --sysconfdir=/etc \
@@ -25,8 +25,6 @@ build() {
       --enable-poppler-qt4 \
       --enable-poppler-glib
   make
-  sed -e 's/^glib_subdir =.*/glib_subdir =/' \
-      -e 's/^qt4_subdir =.*/qt4_subdir =/' -i Makefile
 }
 
 package_poppler() {
@@ -35,6 +33,8 @@ package_poppler() {
   conflicts=("poppler-qt3<${pkgver}")
 
   cd "${srcdir}/${pkgbase}-${pkgver}"
+  sed -e 's/^glib_subdir =.*/glib_subdir =/' \
+      -e 's/^qt4_subdir =.*/qt4_subdir =/' -i Makefile
   make DESTDIR="${pkgdir}" install
 
   rm -f "${pkgdir}"/usr/lib/pkgconfig/poppler-{glib,qt4}.pc
