--- a/cairomm/trunk/PKGBUILD
+++ b/cairomm/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: criminy <criminy@gmail.com>
 
 pkgname=cairomm
-pkgver=1.9.8
+pkgver=1.10.0
 pkgrel=1
 pkgdesc="C++ bindings to Cairo vector graphics library"
 arch=('i686' 'x86_64')
@@ -13,7 +13,7 @@ depends=('cairo' 'libsigc++')
 makedepends=('pkgconfig')
 source=(http://www.cairographics.org/releases/${pkgname}-${pkgver}.tar.gz)
 options=('!libtool' '!emptydirs')
-md5sums=('6d5ce1138dbb09c58038ab6f766d5e88')
+sha1sums=('f08bf8a331067f0d1e876523f07238fba6b26b99')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
