--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,30 +1,34 @@
 # $Id$
+# Maintainer:
 # Contributor: Travis Willard <travis@archlinux.org>
 
 pkgname=nss-mdns
 pkgver=0.10
-pkgrel=2
+pkgrel=3
 pkgdesc="glibc plugin providing host name resolution via mDNS"
 arch=('i686' 'x86_64')
 url="http://0pointer.de/lennart/projects/nss-mdns/"
-license=('lgpl')
+license=('LGPL')
 depends=('glibc')
 makedepends=('pkgconfig')
 backup=('etc/mdns.allow')
 install=nss-mdns.install
-source=(http://0pointer.de/lennart/projects/${pkgname}/${pkgname}-${pkgver}.tar.gz
-        mdns.allow)
+source=("http://0pointer.de/lennart/projects/${pkgname}/${pkgname}-${pkgver}.tar.gz"
+        'mdns.allow')
 md5sums=('03938f17646efbb50aa70ba5f99f51d7'
          '904abb492fb1f56722826c0c3a997bf0')
 
 build() {
-  cd ${srcdir}/${pkgname}-${pkgver}
+  cd "${srcdir}"/${pkgname}-${pkgver}
   ./configure --prefix=/ \
     --disable-lynx \
     --enable-avahi
-  make || return 1
-  make DESTDIR=${pkgdir} install
-  mkdir -p ${startdir}/pkg/etc
-  install -m644 ../mdns.allow ${startdir}/pkg/etc/mdns.allow
+  make
+}
+
+package() {
+  cd "${srcdir}"/${pkgname}-${pkgver}
+  make DESTDIR="${pkgdir}" install
+  install -Dm644 "${srcdir}"/mdns.allow "${pkgdir}"/etc/mdns.allow
 }
 
