--- a/farsight2/trunk/PKGBUILD
+++ b/farsight2/trunk/PKGBUILD
@@ -3,22 +3,19 @@
 # Contributor: William Díaz <wdiaz@archlinux.us>
 
 pkgname=farsight2
-pkgver=0.0.26
+pkgver=0.0.28
 pkgrel=1
 pkgdesc="Audio/Video conference software for Instant Messengers"
 arch=('i686' 'x86_64')
 url="http://farsight.freedesktop.org"
 license=('LGPL')
-depends=('libnice' 'gstreamer0.10-base-plugins' 'gstreamer0.10-python' 'python2' 'pygobject')
-optdepends=('gstreamer0.10-good-plugins: for RTP plugin'
-            'gstreamer0.10-bad-plugins: for RTP plugin')
+depends=('libnice' 'gstreamer0.10-base-plugins' 'gstreamer0.10-good-plugins' 'gstreamer0.10-bad-plugins' 'gstreamer0.10-python' 'pygobject')
 options=('!libtool' '!emptydirs')
 source=(http://farsight.freedesktop.org/releases/${pkgname}/${pkgname}-${pkgver}.tar.gz)
-md5sums=('7756d910687dd2abd455fd68e83f125c')
+md5sums=('38767e775067270754a32aaf8e3a7db1')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  sed -i -e 's#python-config#python2-config#' python/Makefile.in
   ./configure --prefix=/usr \
       --with-package-name='Arch Linux farsight2 package' \
       --with-package-origin='http://archlinux.org' \
